Fix for previous button. Tests button alignment.

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.css
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.css
@@ -23,7 +23,7 @@ mat_tab_style{
 }
 .request-exportNextBtn {
     float: right;
-    margin-right: 7px;
+    margin-left: 7px;
 }
 .request-exportPreviousBtn {
     float: right;
@@ -35,7 +35,7 @@ mat_tab_style{
 }
 .request-exportSubmitBtn {
     float: right;
-    margin-right: 7px;
+    margin-left: 7px;
 }
 /* FileUpload */
 .ui-fileupload-choose.ui-button, .ui-fileupload-choose.ui-button .ui-widget, .ui-fileupload-choose.ui-button .ui-state-default {
